# mlops_hw1

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  dashboard.py  docker-compose.yaml  grpc_client_test.py  grpc_server.py  init_dvc.sh  models.py  prepare_data.py  pyproject.toml  run_docker_mode.sh  run_k8s_mode.sh  run_services.sh  stop_all.sh  test_flask_api.sh
.dvc/: config
.dvc/tmp/: lock
data/: train.csv.dvc
k8s/: Makefile  grpc-deployment.yaml  grpc-service.yaml  lask-service.yaml
k8s/.ipynb_checkpoints/: flask-deployment-checkpoint.yaml
tests/: test_models.py
